style for tablets and mobile

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
   </style>
 </head>
 <body>
-  <h1>Categories</h1>
-  <h1>Show All</h1>
-
+  <h3 style="    margin-bottom: -30px;
+  background-color: rgb(114, 177, 206);
+  display: inline-block;">Categories </h3>
+ 
+<h3 id="clear"class="clear die">clear</h3>
   <div id="father">
+     
   </div>
     
   <div class="attribution">
